--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@ body {
   line-height: 1.7;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 20px;
   font-family: "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+@media (max-width: 768px) {
+  font-size: 25px;
+}
 
 ::-moz-selection {
   background: #000;
