--- a/new/css/style.css
+++ b/new/css/style.css
@@ -9,8 +9,11 @@
 
 body {
     background-color: var(--nlt-blue);
+    width: 100%;
 }
 svg {
+    width: 80%;
+    margin-left: 10%;
     position: absolute;
     display: inline-block;
     vertical-align: middle;
