--- a/new/css/style.css
+++ b/new/css/style.css
@@ -8,32 +8,23 @@
 }
 
 body {
-    background-color: var(--nlt-blue);
+    background-color: var(--white);
     width: 100%;
-}
-svg {
-    width: 80%;
-    margin-left: 10%;
-    position: absolute;
-    display: inline-block;
-    vertical-align: middle;
-    background-color: none;
+    line-height: 1.7;
+    color: rgba(0, 0, 0, 0.8);
+    font-weight: 400;
+    font-size: 20px;
+    font-family: "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-svg > path {
-    stroke: var(--black);
-    stroke-width: 0.1;
-    stroke-linejoin: round;
+img {
+    width: 60%;
+    padding: 50px 20%;
+    background-color: var(--nlt-blue);
 }
 
-svg.white > path {
-    fill: var(--white);
-}
-
-svg.black > path {
-    fill: var(--black);
-}
-
-svg.brown > path {
-    fill: var(--brown);
+article {
+    width: 60%;
+    padding: 50px 20%;
 }
